--- a/.hgignore
+++ b/.hgignore
@@ -1,9 +1,14 @@
 /autom4te.cache/
-.bin$
-.DS_Store$
-.cproject$
-.log$
-.status$
-.m4$
-.komodoproject$
-.in~$
+\.bin$
+\.DS_Store$
+\.cproject$
+\.project$
+\.log$
+\.status$
+\.m4$
+\.komodoproject$
+\.in~$
+\.so$
+\.dylib$
+p2vera/bin/
+\.settings/
